# 236W25

./: CMakeLists.txt  Database.h  DatalogProgram.h  Graph.h  Interpreter.h  LICENSE  Node.h  Parameter.h  Parser.h  Predicate.h  Relation.h  Rule.h  Scheme.h  Tuple.h  fsm.h  main.cpp  output.txt  scanner.h  token.h
